--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,5 +27,9 @@ jobs:
           plugin_activity_days: 14
           plugin_activity_filter: all
           plugin_activity_limit: 5
+          plugin_lines: yes
           plugin_followup: yes
           plugin_languages: yes
+          plugin_people: yes
+          plugin_people_types: contributors, stargazers, watchers, sponsors
+          
