--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,24 +12,15 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
+          filename: metrics.plugin.languages.indepth.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-
-          # Options
-          user: Raqhael
-          template: terminal
-          base: header, activity, community, repositories, metadata
-          config_animated: yes
-          config_timezone: Europe/Berlin
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_lines: yes
-          plugin_followup: yes
+          base: ""
           plugin_languages: yes
-          plugin_people: yes
-          plugin_people_types: contributors, stargazers, watchers, sponsors
-          
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+            gnuplot
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size
+          plugin_languages_limit: 4
+          plugin_languages_analysis_timeout: 15
+
