--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,4 +1,3 @@
-# Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
 name: Metrics
 on:
   # Schedule updates
@@ -12,16 +11,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.languages.indepth.svg
+          filename: metrics.classic.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
-            gnuplot
-          plugin_languages_indepth: yes
-          plugin_languages_details: lines, bytes-size
-          plugin_languages_limit: 4
-          plugin_languages_analysis_timeout: 15
-          commits_authoring: Endunry@users.noreply.github.com, i20029@hb.dhbw-stuttgart.de, i20029, Raphaelsxck@gmail.com, Raphael.sack@gmx.de, Endunry@gmx.de
-
+          base: header, repositories
+          plugin_lines: yes
